테이블 디테일 Table 추가

--- a/sso/src/main/resources/static/resources/dbms/css/detail.css
+++ b/sso/src/main/resources/static/resources/dbms/css/detail.css
@@ -1,6 +1,7 @@
 #schemaDetails {
 	height: 100%;
 }
+
 /*
 #schemaDetails .datagrid-cell {
 	font-size:12px;
@@ -10,3 +11,7 @@
 	height:25px;
 }
 */
+
+#tableDetails {
+	height: 100%;
+}
