그래프 css 수정

--- a/sso/src/main/resources/static/resources/dbms/css/dbms.css
+++ b/sso/src/main/resources/static/resources/dbms/css/dbms.css
@@ -434,3 +434,8 @@ table * {
 	font-size: 12px;
 }
 
+/* drawer */
+.drawer.layout-collapsed {
+    box-shadow: none;
+    right: -100% !important;
+}
