파라미터 통일 DbObjectDTO

--- a/sso/src/main/resources/static/resources/dbms/css/dbms.css
+++ b/sso/src/main/resources/static/resources/dbms/css/dbms.css
@@ -73,6 +73,7 @@ EasyUI
 	display: flex;
     align-items: center;
 }
+
 #user img {
 	height: 90%;
 	width:auto;
@@ -291,6 +292,10 @@ table * {
 }
 
 /* EasyUI */
+/* button */
+.l-btn-plain:hover {
+	border:none;
+}
 /* panel */
 .panel {
 	background-color: gainsboro;
