--- a/sso/src/main/resources/static/resources/dbms/css/dbms.css
+++ b/sso/src/main/resources/static/resources/dbms/css/dbms.css
@@ -7,23 +7,24 @@
 				#userLabel
 				#userBtn
 			#userMenu
-		.side
-			.top
-				#dbmsTree
-			.bottom
-				#include
-		.content
-			.top
-				#centerTabs
-					.tab
-						#scriptToolbar
-						#scriptBody
-							#script
-			.bottom
-				#console
-					#consoleTabs
+		#layout
+			.side
+				.top
+					#dbmsTree
+				.bottom
+					#include
+			.content
+				.top
+					#centerTabs
 						.tab
-							#dbmsOutput	
+							#scriptToolbar
+							#scriptBody
+								#script
+				.bottom
+					#console
+						#consoleTabs
+							.tab
+								#dbmsOutput	
 		#drawer
 			#chartBtn
 			#chartMenu
@@ -111,6 +112,11 @@ EasyUI
 	border: none;
 }
 
+
+#layout {
+	width: 100%;
+	height: 100%;
+}
 
 .side {
 	width: 30%;
