--- a/sso/src/main/resources/static/resources/dbms/css/dbms.css
+++ b/sso/src/main/resources/static/resources/dbms/css/dbms.css
@@ -36,77 +36,81 @@ EasyUI
 	background-color: gainsboro;
 }
 
-
 #container {
-	width:90vw;
+	width: 90vw;
 	height: 90vh;
 }
 
-
 #header {
-	width:100%;
-	height:60px;
+	width: 100%;
+	height: 60px;
 	display: flex;
-    align-items: center;
-    justify-content: flex-end;
+	align-items: center;
+	justify-content: flex-end;
 }
 
-
 #user {
-	min-width:200px;
-	width:auto;
-	height:90%;
+	min-width: 200px;
+	width: auto;
+	height: 90%;
 	/* border: 0.2px solid #95B8E7; */
 	border-radius: 15px;
 	background-color: #fff;
 }
+
 #user:hover {
-	background-color:#f9f9f9;
+	background-color: #f9f9f9;
 }
+
 #user .l-btn-left {
-	width:100%;
-	height:100%;
+	width: 100%;
+	height: 100%;
 }
+
 #user .l-btn-left .l-btn-text {
-	width:100%;
-	height:100%;
+	width: 100%;
+	height: 100%;
 	display: flex;
-    align-items: center;
+	align-items: center;
 }
 
 #user img {
 	height: 90%;
-	width:auto;
-	margin-left:10px;
+	width: auto;
+	margin-left: 10px;
 }
+
 #userLabel {
 	font-size: 20px;
-	margin-left:10px;
+	margin-left: 10px;
 }
+
 #userBtn {
-	margin-left:auto;
-	margin-right:10px;
+	margin-left: auto;
+	margin-right: 10px;
 	height: 73%;
-	width:50px;
-	display:flex;
+	width: 50px;
+	display: flex;
 	flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-	
+	align-items: center;
+	justify-content: space-evenly;
 }
+
 #userBtn span {
-	width:30px;
+	width: 30px;
 	height: 2px;
 	border: 2px solid #709078;
 	border-radius: 2px;
 	background-color: #709078;
 }
+
 #userMenu {
-	width:300px;
+	width: 300px;
 	height: auto !important;
-	border:1px solid #bbb;
+	border: 1px solid #bbb;
 	background-color: #fff;
 }
+
 #userMenu .menu-line {
 	border: none;
 }
@@ -118,57 +122,75 @@ EasyUI
 }
 
 #dbmsTree {
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
+
 #dbmsTree .tree-schema {
 	background: url('/resources/dbms/img/tree_schema.png') no-repeat center/80%;
 }
+
 #dbmsTree .tree-schemaInfo {
 	background: url('/resources/dbms/img/tree_icons.png') no-repeat -208px 0;
 }
+
 #dbmsTree .tree-table {
 	background: url('/resources/dbms/img/tree_table.png') no-repeat center/80%;
 }
+
 #dbmsTree .tree-view {
 	background: url('/resources/dbms/img/tree_view.png') no-repeat center/80%;
 }
+
 #dbmsTree .tree-synonym {
 	background: url('/resources/dbms/img/tree_synonym.png') no-repeat center/80%;
 }
+
 #dbmsTree .tree-function {
-	background: url('/resources/dbms/img/tree_function.png') no-repeat center/80%;
+	background: url('/resources/dbms/img/tree_function.png') no-repeat
+		center/80%;
 }
+
 #dbmsTree .tree-procedure {
-	background: url('/resources/dbms/img/tree_procedure.png') no-repeat center/80%;
+	background: url('/resources/dbms/img/tree_procedure.png') no-repeat
+		center/80%;
 }
+
 #dbmsTree .tree-package {
 	background: url('/resources/dbms/img/tree_package.png') no-repeat center/80%;
 }
+
 #dbmsTree .tree-type {
 	background: url('/resources/dbms/img/tree_type.png') no-repeat center/80%;
 }
+
 #dbmsTree .tree-trigger {
 	background: url('/resources/dbms/img/tree_trigger.png') no-repeat center/80%;
 }
+
 #dbmsTree .tree-sequence {
 	background: url('/resources/dbms/img/tree_synonym.png') no-repeat center/80%;
 }
+
 #dbmsTree .tree-job {
 	background: url('/resources/dbms/img/tree_job.png') no-repeat center/80%;
 }
+
 #dbmsTree .tree-index {
 	background: url('/resources/dbms/img/tree_index.png') no-repeat center/80%;
 }
+
 #dbmsTree .tree-column {
 	background: url('/resources/dbms/img/tree_column.png') no-repeat center/40%;
 }
+
 #dbmsTree .tree-constraint {
-	background: url('/resources/dbms/img/tree_constraint.png') no-repeat center/80%;
+	background: url('/resources/dbms/img/tree_constraint.png') no-repeat
+		center/80%;
 }
 
 #include {
@@ -177,61 +199,65 @@ EasyUI
 
 .content {
 	width: 70%;
-    border-radius: 0 0 6px 0;
+	border-radius: 0 0 6px 0;
 }
+
 .content .tabs-header {
 	border: none;
 }
 
 #scriptToolbar {
-	padding:3px;
-    background-color: #fff8e063
+	padding: 3px;
+	background-color: #fff8e063
 }
 
 #scriptToolbar button {
 	background: #fdfdfd;
 }
+
 #scriptToolbar button:hover {
 	background: #f1f1f1;
 }
 
-
 #scriptBody {
-	overflow:hidden;
+	overflow: hidden;
 	height: calc(100% - 36px);
 }
+
 #script {
-	width:100%;
+	width: 100%;
 	height: 100%;
-	resize:none;
-	font-size:20px;
-	border:1px solid #bbb;
+	resize: none;
+	font-size: 20px;
+	border: 1px solid #bbb;
 	outline-color: #bbb;
 }
-
 
 .top {
 	width: 100% !important;
 	height: 60%;
-	overflow-y:auto;
+	overflow-y: auto;
 }
-
 
 .bottom {
 	width: 100% !important;
 	height: 40%;
-	overflow-y:hidden;
+	overflow-y: hidden;
 }
+
 .bottom #include {
 	height: 100%;
 }
+
 .bottom .tabs-panels {
-	height:calc(100% - 34px);
+	height: calc(100% - 34px);
 }
+
 .bottom .datagrid table tr, td {
 	border-right: none !important;
 	border-left: 0.1px solid #ccc !important;
 }
+
 .bottom .panel-body {
 	height: 100% !important;
 }
@@ -246,11 +272,11 @@ EasyUI
 }
 
 #drawer {
-    padding: 30px;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+	padding: 30px;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
 
 .drawer {
@@ -258,8 +284,8 @@ EasyUI
 }
 
 #mChartCombobox {
-	width:100px;
-	height:20px;
+	width: 100px;
+	height: 20px;
 	text-align: right;
 }
 
@@ -268,19 +294,19 @@ EasyUI
 }
 
 #dChartYearCombobox {
-	width:100px;
+	width: 100px;
 	text-align: right;
 }
 
 #dChartMonthCombobox {
-	width:100px;
+	width: 100px;
 	text-align: right;
 }
 
 #dChart {
 	height: 40%;
 }
- 
+
 .chartDrawer {
 	display: block !important;
 }
@@ -293,15 +319,16 @@ table * {
 /* EasyUI */
 /* button */
 .l-btn-plain:hover {
-	border:none;
+	border: none;
 }
 /* panel */
 .panel {
 	background-color: gainsboro;
 	border-top: 0.1px solid #ddd;
 }
+
 .panel-header {
-	background: linear-gradient(to bottom,#709078 0,#709078 100%);
+	background: linear-gradient(to bottom, #709078 0, #709078 100%);
 	border-radius: 6px 6px 0 0;
 	border: none;
 	width: 100% !important;
@@ -314,7 +341,7 @@ table * {
 .panel-body {
 	width: 100% !important;
 	border: none;
-} 
+}
 
 .panel .layout-panel {
 	width: 100% !important;
@@ -324,128 +351,160 @@ table * {
 .layout-split-west {
 	border-right: 5px solid gainsboro;
 }
+
 .layout-split-south {
 	border-top: 5px solid gainsboro;
 }
+
 .layout-button-left {
-    background: url('/resources/dbms/img/layout_arrows.png') no-repeat 0 0;
+	background: url('/resources/dbms/img/layout_arrows.png') no-repeat 0 0;
 }
+
 .layout-button-right {
-    background: url('/resources/dbms/img/layout_arrows.png') no-repeat 0 -16px;
+	background: url('/resources/dbms/img/layout_arrows.png') no-repeat 0
+		-16px;
 }
+
 .layout-button-down {
-    background: url('/resources/dbms/img/layout_arrows.png') no-repeat -16px 0;
+	background: url('/resources/dbms/img/layout_arrows.png') no-repeat -16px
+		0;
 }
+
 .layout-button-up {
-    background: url('/resources/dbms/img/layout_arrows.png') no-repeat -16px -16px;
+	background: url('/resources/dbms/img/layout_arrows.png') no-repeat -16px
+		-16px;
 }
+
 .layout-expand {
 	background-color: #709078;
 	border-radius: 6px;
 }
 
 /* combobox */
-.combo-p .panel-body{
+.combo-p .panel-body {
 	height: 100% !important;
 	border: 0.1px solid #ddd;
 }
-
 
 /* tab */
 .tabs {
 	border-color: #ddd;
 }
+
 .tabs-header {
 	width: 100% !important;
 	background-color: #fff;
 }
+
 .tabs-title {
 	color: #000;
 }
+
 .tabs-inner {
 	background-color: #fff !important;
-	background: linear-gradient(to bottom,#fff 0,#fff 100%) !important;
+	background: linear-gradient(to bottom, #fff 0, #fff 100%) !important;
 	border: none;
 }
+
 .tabs-panels {
 	width: 100% !important;
 	border: none;
 }
+
 .tabs-panels .panel {
 	width: 100% !important;
 	height: 100%;
 }
-.tabs-panels .panel .tab{
+
+.tabs-panels .panel .tab {
 	height: 100%;
 	width: 100% !important;
 }
+
 .tabs-panels .panel-body {
 	overflow: hidden;
 }
+
 .tabs li.tabs-selected .tabs-inner {
-    border: 1.5px solid #aaa;
-    border-bottom: none;
+	border: 1.5px solid #aaa;
+	border-bottom: none;
 }
+
 .tabs li .tabs-inner {
-    border: 1px solid #aaa;
+	border: 1px solid #aaa;
 }
-.tabs-scroller-left{
-	background: #fff url('/resources/dbms/img/tabs_icons.png') no-repeat 1px center;
-	height:32px !important;
-	border:1px solid #ddd;
-	border-bottom:none;
+
+.tabs-scroller-left {
+	background: #fff url('/resources/dbms/img/tabs_icons.png') no-repeat 1px
+		center;
+	height: 32px !important;
+	border: 1px solid #ddd;
+	border-bottom: none;
 }
+
 .tabs-scroller-right {
-	background: #fff url('/resources/dbms/img/tabs_icons.png') no-repeat -15px center;
-	height:32px !important;
-	border:1px solid #ddd;
-	border-bottom:none;
+	background: #fff url('/resources/dbms/img/tabs_icons.png') no-repeat
+		-15px center;
+	height: 32px !important;
+	border: 1px solid #ddd;
+	border-bottom: none;
 }
+
 .tabs-wrap {
-	width: auto !important;	
+	width: auto !important;
 }
 
 /* datagrid */
 .datagrid {
-    border: none;
-    border-top: 0.1px solid #ddd;
+	border: none;
+	border-top: 0.1px solid #ddd;
 }
+
 .datagrid-wrap {
 	width: 100% !important;
 	height: 100% !important;
 }
+
 .datagrid-wrap .datagrid-view {
 	width: 100% !important;
 	height: 100% !important;
 }
+
 .datagrid-wrap .datagrid-view2 {
 	width: 100% !important;
 	height: 100% !important;
 }
-.datagrid-wrap .datagrid-view .datagrid-header{
+
+.datagrid-wrap .datagrid-view .datagrid-header {
 	width: 100% !important;
 	height: 32px !important;
-	background: linear-gradient(to bottom,#fff 0,#fff 100%) !important;
+	background: linear-gradient(to bottom, #fff 0, #fff 100%) !important;
 }
-.datagrid-wrap .datagrid-view .datagrid-header .datagrid-header-inner{
+
+.datagrid-wrap .datagrid-view .datagrid-header .datagrid-header-inner {
 	height: 100%;
 }
-.datagrid-wrap .datagrid-view .datagrid-header .datagrid-header-inner .datagrid-htable{
+
+.datagrid-wrap .datagrid-view .datagrid-header .datagrid-header-inner .datagrid-htable
+	{
 	height: 32px !important;
 }
-.datagrid-wrap .datagrid-view .datagrid-body{
+
+.datagrid-wrap .datagrid-view .datagrid-body {
 	overflow: auto !important;
 	width: 100% !important;
 	height: calc(100% - 32px) !important;
 }
+
 .datagrid-wrap .datagrid-view .datagrid-body .datagrid-row {
 	height: 25px !important;
 }
+
 .datagrid-wrap .datagrid-view .datagrid-body .datagrid-cell {
 	font-size: 12px;
 }
 
 /* drawer */
 .drawer.layout-collapsed {
-    display: none;
+	display: none;
 }
